# Scan

./: .gitignore  CLAUDE.md  SETUP.md  config.yaml  doclaynet.py  download_subset.py  evaluate_run.py  glm_ocr.py  prepare_subset.py  pyproject.toml  run_benchmark.py  visualize_subset.py
src/scanning/: glm_ocr.py
src/scanning/scripts/: download_subset.py  run_benchmark.py
