[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanning"
version = "0.0.1"
description = "DocLayNet experimentation + GLM-OCR benchmark harness"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "glmocr[selfhosted]>=0.1.5",
    "datasets>=3.0,<4.0",    # 4.x removed script loaders; DocLayNet still ships as a script
    "pillow>=10",
    "tqdm>=4.66",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
scanning-download = "scanning.scripts.download_subset:main"
scanning-benchmark = "scanning.scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
