[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanning"
version = "0.0.1"
description = "DocLayNet experimentation + GLM-OCR benchmark harness"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "glmocr[selfhosted]>=0.1.5",
    "pillow>=10",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
scanning-prepare = "prepare_subset:main"
scanning-benchmark = "run_benchmark:main"

[tool.setuptools]
py-modules = ["doclaynet", "glm_ocr", "prepare_subset", "run_benchmark"]

[tool.ruff]
line-length = 100
target-version = "py312"
